2013-10-25  Andy Buckley  <andy.buckley@cern.ch>

	* 2.0.0 release!!!!!!

2013-10-24  Andy Buckley  <andy.buckley@cern.ch>

	* Supporting zsh completion via bash completion compatibility.

2013-10-22  Andy Buckley  <andy.buckley@cern.ch>

	* Updating the manual to describe YODA rather than AIDA and the new rivet-cmphistos script.

	* bin/make-plots: Adding paths to error messages in histogram combination.

	* CDF_2005_S6217184: fixes to low stats errors and final scatter plot binning.

2013-10-21  Andy Buckley  <andy.buckley@cern.ch>

	* Several small fixes in jet shape analyses, SFM_1984, etc. found
	in the last H++ validation run.

2013-10-18  Andy Buckley  <andy.buckley@cern.ch>

	* Updates to configure and the rivetenv scripts to try harder to discover YODA.

2013-09-26  Andy Buckley  <andy.buckley@cern.ch>

	* Now bundling Cython-generated files in the tarballs, so Cython
	is not a build requirement for non-developers.

2013-09-24  Andy Buckley  <andy.buckley@cern.ch>

	* Removing unnecessary uses of a momentum() indirection when
	accessing kinematic variables.

	* Clean-up in Jet, Particle, and ParticleBase, in particular
	splitting PID functions on Particle from those on PID codes, and
	adding convenience kinematic functions to ParticleBase.

2013-09-23  Andy Buckley  <andy.buckley@cern.ch>

	* Add the -avoid-version flag to libtool.

	* Final analysis histogramming issues resolved.

2013-08-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a ConnectBins flag in make-plots, to decide whether to
	connect adjacent, gapless bins with a vertical line. Enabled by
	default (good for the step-histo default look of MC lines), but
	now rivet-cmphistos disables it for the reference data.

2013-08-14  Andy Buckley  <andy.buckley@cern.ch>

	* Making 2.0.0beta3 -- just a few remaining analysis migration
	issues remaining but it's worth making another beta since there
	were lots of framework fixes/improvements.

2013-08-11  Andy Buckley  <andy.buckley@cern.ch>
