@@ -1,13 +1,14 @@
-#AC_SEARCH_GSL(actionIfFound, actionIfNotFound)
+# AC_SEARCH_GSL(actionIfFound, actionIfNotFound)
 AC_DEFUN([AC_SEARCH_GSL],[
   AC_ARG_WITH([gsl], AC_HELP_STRING(--with-gsl, [path to GSL library and header files]))
 
   ## Use a specified --with-gsl arg to set basic paths, if provided
   GSLCONFIG_PATH=$PATH
   if test -e "$with_gsl"; then
-    GSLCONFIG_PATH=$with_gsl/bin:$GSLCONFIG_PATH
+    GSLCONFIG_PATH="$with_gsl/bin:$GSLCONFIG_PATH"
     GSLPATH="$with_gsl"
     GSLINCPATH="$GSLPATH/include"
+    GSLLIBPATH="$GSLPATH/lib"
     GSL_CPPFLAGS="-I$GSLINCPATH"
     GSL_CXXFLAGS=""
     GSL_LDFLAGS="-L$GSLPATH/lib -lgsl -lgslcblas -lm"
@@ -19,31 +20,23 @@ AC_DEFUN([AC_SEARCH_GSL],[
     AC_MSG_NOTICE(Using $GSLCONFIG to find GSL flags)
     GSLPATH=`$GSLCONFIG --prefix`
     GSLINCPATH="$GSLPATH/include"
+    GSLLIBPATH="$GSLPATH/lib"
     GSL_CPPFLAGS=`$GSLCONFIG --cflags`
     GSL_CXXFLAGS=`$GSLCONFIG --cflags`
     GSL_LDFLAGS=`$GSLCONFIG --libs`
   fi
 
-  ## If it's worked, propagate the variables and execute success arg
+  ## If it's worked, propagate the conditionals and execute success arg
   if test -e "$GSLPATH"; then
-    ## Otherwise  execute the fail arg
-    AC_SUBST([GSLPATH])
-    AC_SUBST([GSLINCPATH])
-    AC_SUBST([GSL_CPPFLAGS])
-    AC_SUBST([GSL_CXXFLAGS])
-    AC_SUBST([GSL_LDFLAGS])
     AM_CONDITIONAL([WITH_GSL], true)
     AM_CONDITIONAL([WITH_GSLLIB], true)
     AM_CONDITIONAL([WITH_GSLINC], true)
     AM_CONDITIONAL([WITHOUT_GSL], false)
     AM_CONDITIONAL([WITHOUT_GSLLIB], false)
     AM_CONDITIONAL([WITHOUT_GSLINC], false)
-    AC_MSG_NOTICE([GSL include path is $GSLINCPATH])
-    AC_MSG_NOTICE([GSL CPPFLAGS is $GSL_CPPFLAGS])
-    AC_MSG_NOTICE([GSL CXXFLAGS is $GSL_CXXFLAGS])
-    AC_MSG_NOTICE([GSL LDFLAGS is $GSL_LDFLAGS])
     $1
   else
+    ## Otherwise execute the fail arg
     AM_CONDITIONAL([WITH_GSL], false)
     AM_CONDITIONAL([WITH_GSLLIB], false)
     AM_CONDITIONAL([WITH_GSLINC], false)
@@ -52,4 +45,16 @@ AC_DEFUN([AC_SEARCH_GSL],[
     AM_CONDITIONAL([WITHOUT_GSLINC], true)
     $2
   fi
+
+  ## Propagate path and flag variables
+  AC_SUBST([GSLPATH])
+  AC_SUBST([GSLINCPATH])
+  AC_SUBST([GSLLIBPATH])
+  AC_SUBST([GSL_CPPFLAGS])
+  AC_SUBST([GSL_CXXFLAGS])
+  AC_SUBST([GSL_LDFLAGS])
+  AC_MSG_NOTICE([GSL include path is $GSLINCPATH])
+  AC_MSG_NOTICE([GSL CPPFLAGS is $GSL_CPPFLAGS])
+  AC_MSG_NOTICE([GSL CXXFLAGS is $GSL_CXXFLAGS])
+  AC_MSG_NOTICE([GSL LDFLAGS is $GSL_LDFLAGS])
 ])
