@@ -11,9 +11,9 @@ test -n "$YODA_PYTHONPATH" || echo "yoda-config could not be found: you may need
 setenv PATH "$exec_prefix/bin:@YODABINPATH@:$PATH"
 
 if ($?@LIBPATHVARNAME@) then
-setenv @LIBPATHVARNAME@ "@libdir@:@YODALIBPATH@:@HEPMCLIBPATH@:@FASTJETLIBPATH@:@YAML_CPPLIBPATH@:$@LIBPATHVARNAME@"
+setenv @LIBPATHVARNAME@ "@libdir@:@YODALIBPATH@:@HEPMCLIBPATH@:@FASTJETLIBPATH@:@YAML_CPPLIBPATH@:@GSLLIBPATH@:$@LIBPATHVARNAME@"
 else
-setenv @LIBPATHVARNAME@ "@libdir@:@YODALIBPATH@:@HEPMCLIBPATH@:@FASTJETLIBPATH@:@YAML_CPPLIBPATH@"
+setenv @LIBPATHVARNAME@ "@libdir@:@YODALIBPATH@:@HEPMCLIBPATH@:@FASTJETLIBPATH@:@YAML_CPPLIBPATH@:@GSLLIBPATH@"
 endif
 
 if ($?PYTHONPATH) then
